--- a/projects/seminar-p1/purejs.html
+++ b/projects/seminar-p1/purejs.html
@@ -8,7 +8,9 @@
     <script src="./common.js"></script>
     <!-- Pure JS Test -->
     <script>
-        console.log('PURE JS TEST: ', getExecutionTime(getPrimeCount, CURRENT_TEST));
+        function startTest() {
+            console.log('PURE JS TEST: ', getExecutionTime(jsFib, CURRENT_TEST));
+        }
     </script>
 </head>
 <body>
